# devoxy

./: Cargo.toml  README.md
devoxx/: Cargo.toml  cache.db
devoxx/src/: main.rs
devoxx/src/cache/: buffer.rs  cache.rs  cache_test.rs  cache_util.rs  mod.rs  policy_util.rs
devoxx/src/storage/: mod.rs  serializer.rs  store.rs  store_test.rs
redis/manifests/: docker-compose.yml  redis-master-deployment.yaml  redis-replica-deployment.yaml  redis-service-lb.yaml  redis-service.yaml
slow/: Cargo.toml
slow/src/: main.rs
