[package]
name = "devoxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "json",
] }
axum = { version = "0.6.20", features = ["tracing"] }
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
lazy_static = "1.4.0"
